src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #ffffff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
}

.iphone {
  background-color: #000000;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.iphone .div {
  background-color: #000000;
  min-height: 2178px;
  /*overflow hides or reveals the extra feature cards*/
  overflow: hidden;
  position: relative;
  min-width: 320px;
  width: 100%;
  max-width: 1440px;
  border: 2px solid orange;
}

@media screen and (min-width: 480px) {
  .iphone .div {
    min-height: 3794px;
  }
}

@media screen and (min-width: 1440px) {
  .iphone .div {
    width: 1440px;
  }
}

.iphone .overlap {
  height: 473px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 100%;
  border: 2px solid red;
}

@media screen and (min-width: 480px) {
  .iphone .overlap {
    width: 83.9%;
    left: 18.1%;
    height: 930px;
  }
}

.iphone .overlap-group {
  height: 473px;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}



.heroBannerMobile {
  height: auto;
  left: 0;
  position: absolute;
  top: 84px;
  width: 100%;
}

@media screen and (min-width: 480px) {
  .heroBannerMobile {
    visibility: hidden;
  }
}

.heroBannerDesktop {
  height: auto;
  left: 0;
  position: absolute;
  top: 3px;
  width: 100%;
  visibility: hidden;
}

@media screen and (min-width: 480px) {
  .heroBannerDesktop {
    visibility: visible;
  }
}

.iphone .rectangle {
  background-color: #00000038;
  height: 242px;
  left: 0;
  position: absolute;
  top: 84px;
  width: 100%;
}

@media screen and (min-width: 480px) {
  .iphone .rectangle {
    height: 720px;
    top: 3px;
    
  }
}

.iphone .rectangle-2 {
  background: linear-gradient(360deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
  height: 132px;
  left: 0;
  position: absolute;
  top: 195px;
  width: 100%;
}

@media screen and (min-width: 480px) {
  .iphone .rectangle-2 {
    height: 392px;
    top: 330px;
  }
}

.menuTextWrapper {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 16px;
  font-weight: 500;
  height: 86px;
  left: 82.8%;
  letter-spacing: 0.48px;
  line-height: 22.7px;
  position: absolute;
  top: 33px;
  width: 267px;
}

@media screen and (min-width: 480px) {
  .menuTextWrapper {
    visibility: hidden;
  }
}

.iphone .nextRaceBox {
  height: auto;
  position: absolute;
  top: 708px;
  width: 100%;
  border: 2px solid purple;
}

.iphone .text-wrapperA {
  color: #606367;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 500;
  height: 76px;
  left: 33px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 733px;
  width: 290px;
}

.iphone .text-wrapperB {
  color: #606367;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 500;
  height: 76px;
  left: 395px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 735px;
  width: 290px;
}

.iphone .text-wrapperC {
  color: #606367;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 500;
  height: 76px;
  left: 647px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 733px;
  width: 290px;
}

.iphone .text-wrapperD {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 700;
  height: 76px;
  left: 33px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 783px;
  width: 302px;
}

.iphone .text-wrapperE {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 700;
  height: 76px;
  left: 395px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 785px;
  width: 302px;
}

.iphone .text-wrapperF {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 700;
  height: 76px;
  left: 649px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 783px;
  width: 302px;
}

.iphone .groupMobile {
  height: auto;
  left: 18.2%;
  position: absolute;
  top: 283px;
  width: 82%;
}

@media screen and (min-width: 480px) {
  .iphone .groupMobile {
    visibility: hidden;
  }
}

.iphone .pDesktop {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 22px;
  font-weight: 500;
  height: 102px;
  left: 49.4%;
  letter-spacing: 0.66px;
  line-height: 30.3px;
  position: absolute;
  top: 528px;
  width: 546px;
}

.iphone .text-wrapper-Desktop {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 82px;
  font-weight: 700;
  height: 114px;
  left: 2.5%;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 510px;
  width: 558px;
}

@media screen and (max-width: 480px) {
  .iphone .pDesktop,
  .iphone .text-wrapper-Desktop {
    visibility: hidden;
  }
}

.iphone .overlap-2 {
  background-color: #60636754;
  height: 189px;
  position: relative;
  width: 97.5%;
}


.iphone .p {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 14px;
  font-weight: 400;
  height: 86px;
  left: 8.33%;
  letter-spacing: 0.42px;
  line-height: 19.9px;
  position: absolute;
  top: 57px;
  width: 85.57%;
}
.iphone .text-wrapper-2 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 700;
  height: 38px;
  left: 7%;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 16px;
  white-space: nowrap;
  width: 226px;
}

.iphone .siteLogo {
  height: 37px;
  left: 5%;
  position: absolute;
  top: 26px;
  width: 32px;
}

@media screen and (min-width: 480px) {
  .iphone .siteLogo {
    visibility: hidden;
  }
}
/* ... */

